--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,6 +10,7 @@
   @import
   'blocks/section',
   'blocks/hero',
+  'blocks/popup',
   'blocks/header',
   'blocks/buttons',
   'blocks/product',
@@ -21,4 +22,5 @@
   'blocks-basket/basket',
   'blocks/burger-button',
   'blocks/mobile-overlay',
-  'blocks-card/card'
+  'blocks-card/card',
+  'blocks-card/swiper-card'
