--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -5,6 +5,7 @@
     --color-accent: #580EA3;
     --color-yellow: #EFDB25;
     --color-gray: #AAABA5;
+    --color-red: #db4827;
     
   
     --border: 1px solid var(--color-dark);
