--- a/styles/blocks-basket/_basket.scss
+++ b/styles/blocks-basket/_basket.scss
@@ -6,8 +6,7 @@
     flex-direction: column;
     row-gap: 50px;
 
-    --gif-image: ;
-    --back-image: ;
+
 
 
     @include mobile{
@@ -117,6 +116,7 @@
             display: flex;
             justify-content: space-between;
             column-gap: 100px;
+            max-width: 60%;
 
             @include mobile{
                 column-gap: 0;
@@ -202,7 +202,7 @@
                 width: 130px;
                 height: 100px;
                 
-                background-image: var(--back-image);
+                /* background-image: var(--back-image);
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center;
@@ -210,7 +210,7 @@
 
                 @include hover{
                     background-image: var(--gif-image) ;
-                }
+                } */
 
                 
                 
@@ -347,6 +347,10 @@
     &__bottom{
         display: flex;
         justify-content: space-between;
+
+        @include mobile{
+            font-size: 15px;
+        }
         
         &-time{
             color: var(--color-accent);
