--- a/styles/blocks/_catalog.scss
+++ b/styles/blocks/_catalog.scss
@@ -1,5 +1,8 @@
 .catalog{
     margin-bottom: 70px;
+
+    --gif-image: ;
+    --back-image: ;
     
 
     &__body{
@@ -36,11 +39,13 @@
         
         @include mobile{
             max-width: 100%;
+            height: 100%;
             padding: 25px 40px;
         }
 
         @include tablet{
             max-width: 100%;
+            height: 100%;
         }
 
         @include hover{
@@ -89,6 +94,26 @@
 
         &-top{
             margin-bottom: 25px;
+
+            /* &-image{
+                
+                width: 100%; 
+                min-height: 200px;
+
+                background-image: var(--back-image);
+                
+                background-size: contain;
+                background-position: center;
+                background-repeat: no-repeat;
+                
+                
+                
+                
+    
+                @include hover{
+                    background-image: var(--gif-image );
+                }
+            } */
         }
 
         &-description{
@@ -105,6 +130,8 @@
             font-weight: bold;
             font-size: 20px;         
         }
+
+        
 
 
        
